# LightWeightCommon

./: CMakeLists.txt  README.md  lightweight_comm.h
id/: versioned_uid.cpp  versioned_uid.h  versioned_uid.hpp
io/: archive.h  filesystem_archive.cpp  filesystem_archive.h
log/: client_log.cpp  client_log.h
memory/: flight_ring.cpp  flight_ring.h  memory.cpp  memory.h
memory/tlsf/: comm_tlsf.cpp  comm_tlsf.h
string/: name.cpp  name.h
test/: flight_ring_test.cpp
threading/: shared_mutex.hpp
utils/: enum_class_bits.h  handle.h  singleton.h
